--- a/src/menu.css
+++ b/src/menu.css
@@ -26,6 +26,9 @@ body {
   cursor: pointer;
   font-weight: 900;
 }
+.menuAll .cvBtn:hover {
+  letter-spacing: 0;
+}
 .menuAll a::after {
   content: "";
   position: absolute;
